# ehyd_tools

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGES.md  CHANGES.txt  CITATION.cff  MANIFEST.in  README.md  README_github.md  _copy_readme.py  links.txt  make_pip.sh  pyproject.toml  requirements.txt  setup.cfg  setup.cfg.BAK  setup.py
.github/workflows/: package_release.yaml
ehyd_tools/: __init__.py  __main__.py  _cl_script.py  _console_script.py  _reader_alt.py  arg_parser.py  cl_tool.py  data_processing.py  deprecated.py  design_rainfall.py  ehyd_stations.json  in_out.py  io.py  main.py  niederschl_lufttemp_verdunst.csv  niederschl_lufttemp_verdunst_2014.csv  oberflaechenwasser.csv  sww_utils.py  synthetic_rainseries.py  synthetic_rainseries_v0.py  unteririsches_wasser.csv
example/: ehyd_100180_gaps.csv  ehyd_100180_meta.txt  ehyd_100180_stats.txt  ehyd_112086_gaps.csv  ehyd_112086_meta.txt  ehyd_112086_stats.txt  example_commandline.ipynb  example_design_rainfall.ipynb  example_design_rainfall.py  example_gis_export.ipynb  example_model_rain.py  example_python_api.ipynb  example_python_api.py  example_python_api_general.ipynb  example_synthetic_rain.ipynb
example/112086_graz/: reader_meta.py
hydrographisches_jahrbuch/: id_tables.py
source/: api.rst  conf.py  index.html  index.rst
