[metadata]
name = ehyd-tools
version = attr: ehyd_tools.__version__

url = https://github.com/MarkusPic/ehyd_tools
project_urls =
    Source = https://github.com/MarkusPic/ehyd_tools
    Changelog = https://github.com/MarkusPic/ehyd_tools/blob/master/CHANGES.md
    Documentation = https://github.com/MarkusPic/ehyd_tools/blob/master/README.md

license = MIT
license_file = LICENSE
author = Markus Pichler
author_email = markus.pichler@tugraz.at
description = Reading and analyzing hydro(geo)logic time series from the Austrian government's "ehyd.gv.at" platform.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Natural Language :: English

keywords =
    swmm
    environment
    civil_engineering
    api

[options]
include_package_data = True
python_requires = >= 3.5
packages = ehyd_tools
install_requires =
    numpy>=1.14
    pandas>=1
    matplotlib>=3
    requests
    argh

[options.extras_require]
pyarrow = pyarrow
fastparquet = fastparquet
